<?xml version="1.0"?>
<package format="3">
  <name>dwa_local_planner</name>
  <version>0.0.0</version>
  <description>Simple DWA local planner</description>

  <maintainer email="saumya.ezhil4@gmail.com">Saumya</maintainer>
  <license>Apache 2.0</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>

